--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Expert Notes</title>
-    <link rel="shortcut icon" href="favicon.png" type="image/png" />
+    <link rel="shortcut icon" href="./public/favicon.png" />
   </head>
   <body class="bg-slate-900 text-slate-50 antialiased">
     <div id="root"></div>
